namespace Backend.Models.Food;

public enum FoodType
{
    Meal = 0,
    Beverage = 1,
    Side = 2,
    Combo = 3
}